connex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connex
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: connex
  template:
    metadata:
      labels:
        app: connex
    spec:
      imagePullSecrets:
        - name: ghcr.io
      containers:
        - name: connex
          image: ghcr.io/invitexbot/connex:placeholder
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
