connex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connex
  namespace: apps
spec:
  selector:
    app: connex
  ports:
    - name: http
      port: 5000
      targetPort: http
  type: ClusterIP
